--- a/about.html
+++ b/about.html
@@ -4,6 +4,25 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
+  <!-- SEO -->
+  <title>About Soft Touch Carpets | Carpet Fitters Luton & St Albans – 38 Years’ Expertise</title>
+  <meta name="description"
+        content="Learn how our NVQ-qualified carpet fitters have delivered flawless carpet and vinyl flooring installations across Luton, St Albans and Hertfordshire for 38 years, with free home measuring on every project." />
+  <link rel="canonical" href="https://softtouchcarpets.uk/about.html" />
+  <meta name="keywords"
+        content="carpet fitters Luton, vinyl flooring, stairs carpet, local carpet fitters, carpet installation St Albans" />
+
+  <!-- Open Graph / Twitter -->
+  <meta property="og:type" content="website" />
+  <meta property="og:title"
+        content="About Soft Touch Carpets | Trusted Carpet Fitters in Luton & St Albans" />
+  <meta property="og:description"
+        content="Family-run carpet & vinyl flooring specialists with 38 years’ experience serving Luton, St Albans and Hertfordshire." />
+  <meta property="og:url" content="https://softtouchcarpets.uk/about.html" />
+  <meta property="og:image" content="https://softtouchcarpets.uk/img/og-about.jpg" />
+  <meta property="og:locale" content="en_GB" />
+  <meta name="twitter:card" content="summary_large_image" />
+
   <!-- Bootstrap CSS -->
   <link
     href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
@@ -23,17 +42,7 @@
 
   <!-- About Page-Specific Styles -->
   <link rel="stylesheet" href="about.css" />
-
-  <!-- SEO Meta Tags -->
-  <title>About Us | Professional Carpet Fitting &amp; Flooring Services in Luton &amp; St Albans</title>
-  <meta
-    name="description"
-    content="38 years of expertise in expert carpet fitting, home carpet installation, and quality flooring services. Proudly serving Luton, St Albans and Hertfordshire."
-    />
-  <meta
-    name="keywords"
-    content="carpet fitting, home carpet, carpet installation, stair runner, carpet and flooring, Luton carpet fitting, St Albans carpet fitting, 38 years experience"
-    />
+   <link rel="stylesheet" href="cookie.css" />
 
   <!-- Google Fonts (Playfair Display, Montserrat, Nunito) -->
   <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -44,27 +53,64 @@
   />
   <link rel="icon" type="image/png" href="STCEE.png">
 
-  <!-- Optional Schema Markup (LocalBusiness) -->
+    <!-- LocalBusiness Schema (unchanged) -->
   <script type="application/ld+json">
   {
     "@context": "https://schema.org",
     "@type": "LocalBusiness",
     "name": "Soft Touch Carpets & Elegant Edges",
-    "description": "Expert carpet fitting, stair runner installation, home carpet solutions, and comprehensive carpet and flooring services in Hertfordshire—proudly serving Luton and St Albans with 38 years of excellence."
+    "url": "https://softtouchcarpets.uk",
     "telephone": "+44 7768 106205",
+    "image": "https://softtouchcarpets.uk/img/og-hero.jpg",
+    "description": "NVQ-qualified carpet fitters offering free home measuring and expert installation across Luton, St Albans & Hertfordshire.",
     "address": {
       "@type": "PostalAddress",
       "streetAddress": "2 Warren Close",
       "addressLocality": "Hatfield",
-      "addressRegion": "Herts",
+      "addressRegion": "Hertfordshire",
       "postalCode": "AL10 0AL",
       "addressCountry": "GB"
     },
-    "url": "https://softtouchcarpets.uk/about.html"
+    "areaServed": ["Luton","St Albans","Dunstable","Harpenden","Welwyn Garden City"],
+    "openingHoursSpecification": [{
+      "@type": "OpeningHoursSpecification",
+      "dayOfWeek": ["Monday","Tuesday","Wednesday","Thursday","Friday","Saturday"],
+      "opens": "08:00",
+      "closes": "18:00"
+    }],
+    "serviceType": ["Carpet fitting","Vinyl flooring installation","Stair runner installation"],
+    "hasOfferCatalog": {
+      "@type": "OfferCatalog",
+      "name": "Services",
+      "itemListElement": [{
+        "@type": "Offer",
+        "name": "Free Home Measure",
+        "price": "0.00",
+        "priceCurrency": "GBP"
+      },{
+        "@type": "Offer",
+        "name": "Expert Installation",
+        "priceCurrency": "GBP"
+      }]
+    }
   }
   </script>
 </head>
 <body>
+  <!-- COOKIE BANNER -->
+<div id="cookie-banner" role="dialog" aria-live="polite" class="cookie-banner">
+  <div class="cookie-content">
+    <p>
+      🍪 We use cookies to improve your browsing experience, deliver personalised content, and analyse our traffic. 
+      By clicking “Accept All”, you consent to our use of cookies. See our 
+      <a href="cookie-policy.html">Cookie Policy</a> for details.
+    </p>
+    <div class="cookie-buttons">
+      <button id="cookie-accept" class="btn-accept">Accept All 🍪</button>
+      <button id="cookie-decline" class="btn-decline">Decline</button>
+    </div>
+  </div>
+</div>
   <!-- NAVBAR (Sticky) -->
   <nav class="navbar navbar-expand-lg navbar-dark bg-brown sticky-top shadow-sm">
     <div class="container">
@@ -108,10 +154,10 @@
     <div class="hero-overlay"></div>
     <div class="container text-center text-white">
       <h1 class="display-4 hero-title mb-3">
-        Trusted Carpet Fitter with 38 Years of Professional Experience
+        38 Years of Expert Carpet Fitting in <br> St Albans & Luton
       </h1>
       <p class="lead fw-normal hero-subtitle">
-        38 years of professional carpet fitting, home carpet installation, and flooring excellence.
+          Family-run, NVQ-qualified and trusted for carpet, stairs carpet and vinyl flooring across Luton, St Albans & Hertfordshire.
       </p>
     </div>
   </header>
@@ -126,8 +172,10 @@
           </h2>
           <!-- Revised text per your request -->
           <p class="fs-5 m-3">
-            We've been doing this for 38 years, so you can trust us to do a great job. 
-            We care about our customers and treat every project like it's our own home.
+            Since 1987 we’ve supplied and installed high-quality carpet, stairs carpet and
+  vinyl flooringfor thousands of homeowners in Luton, St Albans and nearby towns.
+  As true local carpet fitters, we treat every floor like our own, precision
+  cuts, neat seams and tidy finishes, guaranteed.
           </p>
         </div>
       </div>
@@ -206,7 +254,8 @@
             Serving Hertfordshire, Luton &amp; St Albans and Beyond
           </h2>
           <p class="fs-5">
-            Based in St Albans first and travelling within a <strong>20–40 mile radius</strong>—and can go further for larger projects.
+             Our base near St Albans puts us minutes from central Luton. We happily travel within a
+             20–40 mile radius for carpet and vinyl flooring projects, larger contracts on request.
           </p>
         </div>
       </div>
@@ -259,16 +308,66 @@
   </section>
 
   <!-- FOOTER -->
-  <footer>
-    <div class="container footer-content">
-      <p>&copy; 2025 Soft Touch Carpets &amp; Elegant Edges</p>
-      <p>Proudly serving Hertfordshire &amp; surrounding areas</p>
-      <p>
-        Call: 07768 106205 |
-        Email: <a href="mailto:softtouchcarpets100@gmail.com" style="color:white;">softtouchcarpets100@gmail.com</a>
-      </p>
+<!-- FOOTER -->
+<footer class="border-top py-5 bg-brown text-white">
+  <div class="container">
+    <div class="row gy-4">
+
+      <!-- Brand / Blurb -->
+      <div class="col-md-4 text-start">
+        <a href="index.html" class="d-inline-flex align-items-left mb-2 text-decoration-none text-white">
+          <img src="STCEE.png" alt="" width="36" height="36" class="me-2">
+          <span class="fw-bold">Soft Touch Carpets</span>
+        </a>
+        <p class="small mb-0">
+          NVQ-qualified carpet fitters with 38years’ experience in
+          Luton, St Albans & Hertfordshire.
+          We supply and install carpet, stairs carpet and vinyl flooring with free home measuring.
+        </p>
+      </div>
+
+      <!-- Quick Links -->
+      <div class="col-6 col-md-2">
+        <h6 class="fw-semibold text-start mb-3">Pages</h6>
+        <ul class="list-unstyled text-start small">
+          <li><a href="index.html"     class="footer-link">Home</a></li>
+          <li><a href="about.html"     class="footer-link">About</a></li>
+          <li><a href="services.html"  class="footer-link">Services</a></li>
+          <li><a href="contact.html"   class="footer-link">Contact</a></li>
+        </ul>
+      </div>
+
+      <!-- Policies -->
+      <div class="col-6 col-md-3">
+        <h6 class="fw-semibold text-start mb-3">Policies</h6>
+        <ul class="list-unstyled text-start small">
+          <li><a href="cookie-policy.html"  class="footer-link">Cookie&nbsp;Policy</a></li>
+          <li><a href="privacy-policy.html" class="footer-link">Privacy&nbsp;Policy</a></li>
+        </ul>
+      </div>
+
+      <!-- Social -->
+      <div class="col-md-3">
+        <h6 class="fw-semibold text-start mb-3">Follow&nbsp;Us</h6>
+        <div class="d-flex gap-3 fs-4">
+          <a href="https://www.instagram.com/softtouchcarpets/"          class="footer-link" aria-label="Instagram"><i class="bi bi-instagram"></i></a>
+          <a href="https://www.facebook.com/profile.php?id=100092311272814" class="footer-link" aria-label="Facebook"><i class="bi bi-facebook"></i></a>
+          <a href="https://g.co/kgs/qTBwTbf"                              class="footer-link" aria-label="Google Business Profile"><i class="bi bi-google"></i></a>
+        </div>
+      </div>
+
     </div>
-  </footer>
+
+    <hr class="border-light my-4">
+
+    <div class="text-center small">
+      &copy; 2025 Soft Touch Carpets &amp; Elegant Edges &middot;
+      Website Design by
+      <a href="https://cleandesignuk.com/" class="footer-link">Clean&nbsp;Design&nbsp;UK</a>
+    </div>
+  </div>
+</footer>
+
 
   <!-- Bootstrap JS Bundle -->
   <script
@@ -276,5 +375,7 @@
     integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
     crossorigin="anonymous"
   ></script>
+
+   <script src="cookie.js"></script>
 </body>
 </html>
