--- a/contact.html
+++ b/contact.html
@@ -4,6 +4,24 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
+ <!-- SEO -->
+  <title>Contact Carpet Fitters Luton & St Albans| Free Home Measure | Soft Touch Carpets</title>
+  <meta name="description"
+        content="Get in touch with NVQ-qualified carpet fitters in Luton for free home measuring, stairs carpet and vinyl flooring installations. Serving Luton, St Albans & Hertfordshire." />
+  <link rel="canonical" href="https://softtouchcarpets.uk/contact.html" />
+  <meta name="keywords"
+        content="carpet fitters Luton, contact, free home measure, stairs carpet, vinyl flooring, local carpet fitters" />
+
+  <!-- Open Graph / Twitter -->
+  <meta property="og:type" content="website" />
+  <meta property="og:title" content="Contact Carpet Fitters Luton | Soft Touch Carpets" />
+  <meta property="og:description"
+        content="Request a free measure or ask about carpet and vinyl flooring installations in Luton, St Albans & Hertfordshire." />
+  <meta property="og:url" content="https://softtouchcarpets.uk/contact.html" />
+  <meta property="og:image" content="https://softtouchcarpets.uk/img/og-contact.jpg" />
+  <meta property="og:locale" content="en_GB" />
+  <meta name="twitter:card" content="summary_large_image" />
+
   <!-- Bootstrap CSS -->
   <link
     href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
@@ -11,21 +29,17 @@
     integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
     crossorigin="anonymous"
   >
+  <link
+  rel="stylesheet"
+  href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.min.css"
+/>
+
   <link rel="icon" type="image/png" href="STCEE.png">
   <!-- Page-Specific Styles -->
   <link rel="stylesheet" href="styles.css" />
   <link rel="stylesheet" href="contact.css" />
+   <link rel="stylesheet" href="cookie.css" />
 
-  <!-- SEO Meta Tags -->
-  <title>Contact Soft Touch Carpets | Professional Carpet Fitting &amp; Installation in Luton, St Albans &amp; Hertfordshire</title>
-  <meta
-    name="description"
-    content="Contact Soft Touch Carpets for expert carpet fitting, home carpet installation, and quality flooring solutions. Get your free measure, quote, or more info on stairs & landing carpet, vinyl flooring, and custom mat services – proudly serving Luton, St Albans, Hertfordshire and beyond."
-    />
-  <meta
-    name="keywords"
-    content="contact, carpet fitting, home carpet installation, stairs &amp; landing carpet, vinyl flooring, custom mat services, Luton, St Albans, Hertfordshire"
-    />
 
   <!-- Google Fonts (Playfair Display, Montserrat, Nunito) -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -34,6 +48,48 @@
     href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@700;900&family=Montserrat:wght@400;700&family=Nunito:wght@300;400;700&display=swap"
     rel="stylesheet"
   />
+  <!-- LocalBusiness Schema (unchanged) -->
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "LocalBusiness",
+    "name": "Soft Touch Carpets & Elegant Edges",
+    "url": "https://softtouchcarpets.uk",
+    "telephone": "+44 7768 106205",
+    "image": "https://softtouchcarpets.uk/img/og-hero.jpg",
+    "description": "NVQ-qualified carpet fitters offering free home measuring and expert installation across Luton, St Albans & Hertfordshire.",
+    "address": {
+      "@type": "PostalAddress",
+      "streetAddress": "2 Warren Close",
+      "addressLocality": "Hatfield",
+      "addressRegion": "Hertfordshire",
+      "postalCode": "AL10 0AL",
+      "addressCountry": "GB"
+    },
+    "areaServed": ["Luton","St Albans","Dunstable","Harpenden","Welwyn Garden City"],
+    "openingHoursSpecification": [{
+      "@type": "OpeningHoursSpecification",
+      "dayOfWeek": ["Monday","Tuesday","Wednesday","Thursday","Friday","Saturday"],
+      "opens": "08:00",
+      "closes": "18:00"
+    }],
+    "serviceType": ["Carpet fitting","Vinyl flooring installation","Stair runner installation"],
+    "hasOfferCatalog": {
+      "@type": "OfferCatalog",
+      "name": "Services",
+      "itemListElement": [{
+        "@type": "Offer",
+        "name": "Free Home Measure",
+        "price": "0.00",
+        "priceCurrency": "GBP"
+      },{
+        "@type": "Offer",
+        "name": "Expert Installation",
+        "priceCurrency": "GBP"
+      }]
+    }
+  }
+  </script>
 
   <!-- Client-side spam check & honeypot usage -->
   <script defer>
@@ -51,6 +107,20 @@
   </script>
 </head>
 <body>
+  <!-- COOKIE BANNER -->
+<div id="cookie-banner" role="dialog" aria-live="polite" class="cookie-banner">
+  <div class="cookie-content">
+    <p>
+      🍪 We use cookies to improve your browsing experience, deliver personalised content, and analyse our traffic. 
+      By clicking “Accept All”, you consent to our use of cookies. See our 
+      <a href="cookie-policy.html">Cookie Policy</a> for details.
+    </p>
+    <div class="cookie-buttons">
+      <button id="cookie-accept" class="btn-accept">Accept All 🍪</button>
+      <button id="cookie-decline" class="btn-decline">Decline</button>
+    </div>
+  </div>
+</div>
   <!-- NAVBAR (Sticky) -->
   <nav class="navbar navbar-expand-lg navbar-dark bg-brown sticky-top shadow-sm">
     <div class="container">
@@ -93,9 +163,10 @@
   <header class="contact-hero d-flex align-items-center justify-content-center">
     <div class="hero-overlay"></div>
     <div class="container text-center text-white">
-      <h1 class="display-4 hero-title mb-3">Connect for Carpet Fitting &amp; Installation in Luton</h1>
+      <h1 class="display-4 hero-title mb-3">Contact Local Carpet Fitters Near Luton</h1>
       <p class="lead mb-4">
-        Ready to transform your floors with our carpet fitting, home carpet installation, and quality flooring solutions? Contact us today for free measures.
+        Book your free home measure for carpet, stairs carpet or vinyl flooring
+  in Luton, St Albans & neighbouring towns.
       </p>
       <a href="#contactSection" class="btn btn-tan btn-lg">Contact Us</a>
     </div>
@@ -112,38 +183,27 @@
             Whether you have a query about expert carpet fitting, home carpet installation, stairs &amp; landing carpet solutions, vinyl flooring options, or custom mat services, our team is ready to help.
           </p>
           <ul class="list-unstyled fs-5">
-            <!-- Replaced full address with St Albans, Herts -->
-            <li class="mb-3">
-              <span class="fw-semibold">Address:</span><br/>
-              St Albans, Herts
-            </li>
-            <li class="mb-3">
-              <span class="fw-semibold">Call Us:</span><br/>
-              Stephen: 07768106205<br/>
-              Maxine: 07921455215
-            </li>
-            <li class="mb-3">
-              <span class="fw-semibold">Email:</span><br/>
-              softtouchcarpets100@gmail.com
-            </li>
-          </ul>
+  <li class="mb-3"><span class="fw-semibold">Address:</span><br/>St Albans, Herts</li>
+  <li class="mb-3"><span class="fw-semibold">Call us:</span><br/>
+    <a href="tel:+447768106205" class="text-decoration-none">Stephen&nbsp;– 07768 106205</a><br/>
+    <a href="tel:+447921455215" class="text-decoration-none">Maxine&nbsp;– 07921 455215</a>
+  </li>
+  <li class="mb-3"><span class="fw-semibold">Email:</span><br/>
+    <a href="mailto:softtouchcarpets100@gmail.com" class="text-decoration-none">
+      softtouchcarpets100@gmail.com
+    </a>
+  </li>
+</ul>
+
           <p class="small text-muted">
-            We proudly serve Hertfordshire, including Luton, St Albans, and surrounding areas within a 20–40 mile radius. For larger projects, we’re happy to travel further—just ask.
+            We proudly serve Hertfordshire, including Luton, St Albans, and surrounding areas within a 20–40 mile radius. For larger projects, we’re happy to travel further, just ask.
           </p>
         </div>
 
         <!-- Embedded Map (Shows Hatfield area by default; remove or replace if desired) -->
         <div class="col-lg-6">
           <div class="map-wrapper position-relative rounded shadow overflow-hidden">
-            <iframe
-              src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2381.3578177238225!2d-0.22388158431624517!3d51.76262610279852!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x48763a9b374501af%3A0xfd10df5522725673!2sHatfield%2C%20UK!5e0!3m2!1sen!2suk!4v1689000000000!5m2!1sen!2suk"
-              width="100%"
-              height="350"
-              style="border:0;"
-              allowfullscreen
-              loading="lazy"
-              referrerpolicy="no-referrer-when-downgrade"
-            ></iframe>
+            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d157740.97144674216!2d-0.27409235!3d51.8481255!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x2bd56db6d66b8039%3A0xda21bfbc040ec347!2sSoft%20Touch%20Carpets%20%26%20Elegant%20Edges!5e0!3m2!1sen!2sid!4v1753670454874!5m2!1sen!2sid" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
           </div>
         </div>
       </div>
@@ -248,13 +308,66 @@
     </div>
   </section>
 
-  <!-- FOOTER -->
-  <footer class="border-top py-4 bg-brown">
-    <div class="container text-center">
-      <p class="mb-1">&copy; 2025 Soft Touch Carpets &amp; Elegant Edges</p>
-      <p class="mb-0">Serving Hertfordshire &amp; Beyond</p>
+<!-- FOOTER -->
+<footer class="border-top py-5 bg-brown text-white">
+  <div class="container">
+    <div class="row gy-4">
+
+      <!-- Brand / Blurb -->
+      <div class="col-md-4 text-start">
+        <a href="index.html" class="d-inline-flex align-items-left mb-2 text-decoration-none text-white">
+          <img src="STCEE.png" alt="" width="36" height="36" class="me-2">
+          <span class="fw-bold">Soft Touch Carpets</span>
+        </a>
+        <p class="small mb-0">
+          NVQ-qualified carpet fitters with 38years’ experience in
+          Luton, St Albans & Hertfordshire.
+          We supply and install carpet, stairs carpet and vinyl flooring with free home measuring.
+        </p>
+      </div>
+
+      <!-- Quick Links -->
+      <div class="col-6 col-md-2">
+        <h6 class="fw-semibold text-start mb-3">Pages</h6>
+        <ul class="list-unstyled text-start small">
+          <li><a href="index.html"     class="footer-link">Home</a></li>
+          <li><a href="about.html"     class="footer-link">About</a></li>
+          <li><a href="services.html"  class="footer-link">Services</a></li>
+          <li><a href="contact.html"   class="footer-link">Contact</a></li>
+        </ul>
+      </div>
+
+      <!-- Policies -->
+      <div class="col-6 col-md-3">
+        <h6 class="fw-semibold text-start mb-3">Policies</h6>
+        <ul class="list-unstyled text-start small">
+          <li><a href="cookie-policy.html"  class="footer-link">Cookie&nbsp;Policy</a></li>
+          <li><a href="privacy-policy.html" class="footer-link">Privacy&nbsp;Policy</a></li>
+        </ul>
+      </div>
+
+      <!-- Social -->
+      <div class="col-md-3">
+        <h6 class="fw-semibold text-start mb-3">Follow&nbsp;Us</h6>
+        <div class="d-flex gap-3 fs-4">
+          <a href="https://www.instagram.com/softtouchcarpets/"          class="footer-link" aria-label="Instagram"><i class="bi bi-instagram"></i></a>
+          <a href="https://www.facebook.com/profile.php?id=100092311272814" class="footer-link" aria-label="Facebook"><i class="bi bi-facebook"></i></a>
+          <a href="https://g.co/kgs/qTBwTbf"                              class="footer-link" aria-label="Google Business Profile"><i class="bi bi-google"></i></a>
+        </div>
+      </div>
+
     </div>
-  </footer>
+
+    <hr class="border-light my-4">
+
+    <div class="text-center small">
+      &copy; 2025 Soft Touch Carpets &amp; Elegant Edges &middot;
+      Website Design by
+      <a href="https://cleandesignuk.com/" class="footer-link">Clean&nbsp;Design&nbsp;UK</a>
+    </div>
+  </div>
+</footer>
+
 
   <!-- Bootstrap JS Bundle -->
   <script
@@ -262,5 +375,7 @@
     integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
     crossorigin="anonymous"
   ></script>
+
+   <script src="cookie.js"></script>
 </body>
 </html>
