--- a/services.html
+++ b/services.html
@@ -4,6 +4,25 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
+  <!-- SEO -->
+  <title>Carpet Fitters Luton & St Albans | Carpet, Stairs Carpet & Vinyl Flooring Specialists</title>
+  <meta name="description"
+        content="NVQ-qualified carpet fitters delivering flawless carpet, stairs carpet and vinyl flooring installations across Luton, St Albans & Hertfordshire for 38 years. Free home measuring on every project." />
+  <link rel="canonical" href="https://softtouchcarpets.uk/services.html" />
+  <meta name="keywords"
+        content="carpet fitters Luton, stairs carpet, vinyl flooring, carpet installation St Albans, local carpet fitters" />
+
+  <!-- Open Graph / Twitter -->
+  <meta property="og:type" content="website" />
+  <meta property="og:title"
+        content="Carpet Fitters Luton | Expert Carpet & Vinyl Flooring Services" />
+  <meta property="og:description"
+        content="Family-run carpet & vinyl flooring specialists serving Luton, St Albans & Hertfordshire since 1987." />
+  <meta property="og:url" content="https://softtouchcarpets.uk/services.html" />
+  <meta property="og:image" content="https://softtouchcarpets.uk/img/og-services.jpg" />
+  <meta property="og:locale" content="en_GB" />
+  <meta name="twitter:card" content="summary_large_image" />
+
   <!-- Bootstrap CSS -->
   <link 
     href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
@@ -11,20 +30,16 @@
     integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
     crossorigin="anonymous"
   >
+  <link
+  rel="stylesheet"
+  href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.min.css"
+/>
+
   <!-- Global Styles -->
   <link rel="stylesheet" href="styles.css" />
   <!-- Services Page Styles -->
   <link rel="stylesheet" href="services.css" />
-
-  <title>Experienced Carpet Fitting &amp; Home Carpet Installation | Luton, St Albans &amp; Hertfordshire</title>
-  <meta 
-    name="description" 
-    content="38 years of expertise in expert carpet fitting, home carpet installation, stairs &amp; landing carpet solutions, vinyl flooring, and custom mat whipping. Proudly serving Luton, St Albans, Hertfordshire and beyond." 
-    />
-  <meta 
-    name="keywords" 
-    content="carpet fitting, home carpet installation, stairs &amp; landing carpet, vinyl flooring, custom mat whipping, Luton carpet fitting, St Albans carpet fitting, Hertfordshire carpet services, 38 years experience" 
-    />
+ <link rel="stylesheet" href="cookie.css" />
 
   <!-- Google Fonts (Playfair Display, Montserrat, Nunito) -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -34,29 +49,55 @@
     rel="stylesheet"
   >
   <link rel="icon" type="image/png" href="STCEE.png">
-  <!-- Optional Schema Markup (LocalBusiness) -->
+    <!-- LocalBusiness + Service schema -->
   <script type="application/ld+json">
   {
     "@context": "https://schema.org",
     "@type": "LocalBusiness",
     "name": "Soft Touch Carpets & Elegant Edges",
-    "description": "carpet fitting, home carpet installation, stairs & landing carpet, vinyl flooring, and custom mat solutions in Hertfordshire—proudly serving Luton, St Albans and surrounding areas with 38 years experience."
+    "url": "https://softtouchcarpets.uk",
     "telephone": "+44 7768 106205",
+    "image": "https://softtouchcarpets.uk/img/og-services.jpg",
+    "description": "NVQ-qualified carpet fitters offering carpet, stairs carpet and vinyl flooring installations across Luton, St Albans & Hertfordshire since 1987.",
     "address": {
       "@type": "PostalAddress",
       "streetAddress": "2 Warren Close",
       "addressLocality": "Hatfield",
-      "addressRegion": "Herts",
+      "addressRegion": "Hertfordshire",
       "postalCode": "AL10 0AL",
       "addressCountry": "GB"
     },
-    "image": "https://softtouchcarpets.uk/stair-runners.jpg",
-    "url": "https://softtouchcarpets.uk/services.html"
+    "areaServed": ["Luton","St Albans","Dunstable","Harpenden","Welwyn Garden City"],
+    "serviceType": [
+      "Carpet fitting",
+      "Stairs carpet installation",
+      "Vinyl flooring installation",
+      "Custom carpet whipping"
+    ],
+    "openingHoursSpecification": [{
+      "@type": "OpeningHoursSpecification",
+      "dayOfWeek": ["Monday","Tuesday","Wednesday","Thursday","Friday","Saturday"],
+      "opens": "08:00",
+      "closes": "18:00"
+    }]
   }
   </script>
 </head>
 <body>
-
+<!-- COOKIE BANNER -->
+<div id="cookie-banner" role="dialog" aria-live="polite" class="cookie-banner">
+  <div class="cookie-content">
+    <p>
+      🍪 We use cookies to improve your browsing experience, deliver personalised content, and analyse our traffic. 
+      By clicking “Accept All”, you consent to our use of cookies. See our 
+      <a href="cookie-policy.html">Cookie Policy</a> for details.
+    </p>
+    <div class="cookie-buttons">
+      <button id="cookie-accept" class="btn-accept">Accept All 🍪</button>
+      <button id="cookie-decline" class="btn-decline">Decline</button>
+    </div>
+  </div>
+</div>
   <!-- NAVBAR (Sticky) -->
   <nav class="navbar navbar-expand-lg navbar-dark bg-brown sticky-top shadow-sm ">
     <div class="container">
@@ -102,10 +143,10 @@
     <div class="container text-center text-white">
       <!-- Changed "Over 40 years" to "with 38 years experience" -->
       <h1 class="display-4 hero-title mb-3">
-        Best Carpet Fitting &amp; Home Installation
+        Expert Carpets Installation <br> & Free Measuring
       </h1>
       <p class="lead fw-normal">
-        With 38 years of expertise in carpet fitting, home carpet installation, stairs &amp; landing carpet, vinyl flooring, and custom mat whipping — proudly serving Luton, St Albans, Hertfordshire and beyond.
+        38 years of flawless carpet, stairs carpet and vinyl flooring for homes across Luton, St Albans & Hertfordshire.
       </p>
       
       <a href="contact.html" class="btn btn-tan btn-lg mt-4">
@@ -125,7 +166,7 @@
           <p class="fs-5">
             Whether you need plush carpets, durable vinyl for high-traffic areas, 
             or bespoke mat whipping to make use of leftovers, Soft Touch Carpets &amp; Elegant Edges has you covered. 
-            Explore our services below to see why customers across Luton and Hertfordshire trust us for quality flooring.
+            Explore our services below to see why customers across St Albans and Hertfordshire trust us for quality flooring.
           </p>
         </div>
       </div>
@@ -133,7 +174,7 @@
   </section>
 
   <!-- SERVICE SECTION: CARPET FITTING -->
-  <section class="py-5" style="background-color: var(--brown); color: #fff;">
+  <section id="carpet-fitting" class="py-5" style="background-color: var(--brown); color: #fff;">
     <div class="container">
       <div class="row align-items-center mb-5">
         <div class="col-md-6 pe-md-5 mb-4 mb-md-0">
@@ -169,7 +210,7 @@
   <!-- REMOVED: STAIR RUNNER INSTALLATION SECTION COMPLETELY -->
 
   <!-- SERVICE SECTION: VINYL FLOORING -->
-  <section class="py-5 bg-cream">
+  <section id="vinyl-flooring" class="py-5 bg-cream">
     <div class="container">
       <div class="row align-items-center mb-5 flex-md-row-reverse">
         <div class="col-md-6 ps-md-5 mb-4 mb-md-0">
@@ -202,7 +243,7 @@
   </section>
 
   <!-- SERVICE SECTION: CUSTOM MATS & WHIPPING -->
-  <section class="py-5" style="background-color: var(--tan); color: #fff;">
+  <section id="custom-mats" class="py-5" style="background-color: var(--tan); color: #fff;">
     <div class="container">
       <div class="row align-items-center mb-5 flex-md-row-reverse">
         <div class="col-md-6 col-lg-3  mb-4 mb-md-0">
@@ -464,17 +505,92 @@
     </div>
   </section>
 
-  <!-- FOOTER -->
-  <footer style="background-color: var(--brown); color: #fff;">
-    <div class="container footer-content">
-      <p>&copy; 2025 Soft Touch Carpets &amp; Elegant Edges</p>
-      <p>Proudly serving Hertfordshire &amp; Beyond</p>
-      <p>
-        Call: 07768 106205 | Email: 
-        <a href="mailto:softtouchcarpets100@gmail.com" style="color:#fff;">softtouchcarpets100@gmail.com</a>
-      </p>
+<!-- FOOTER -->
+<footer class="border-top py-5 bg-brown text-white">
+  <div class="container">
+    <div class="row gy-4">
+
+      <!-- Brand / Blurb -->
+      <div class="col-md-4 text-start">
+        <a href="index.html" class="d-inline-flex align-items-left mb-2 text-decoration-none text-white">
+          <img src="STCEE.png" alt="" width="36" height="36" class="me-2">
+          <span class="fw-bold">Soft Touch Carpets</span>
+        </a>
+        <p class="small mb-0">
+          NVQ-qualified carpet fitters with 38years’ experience in
+          Luton, St Albans & Hertfordshire.
+          We supply and install carpet, stairs carpet and vinyl flooring with free home measuring.
+        </p>
+      </div>
+
+      <!-- Quick Links -->
+      <div class="col-6 col-md-2">
+        <h6 class="fw-semibold text-start mb-3">Pages</h6>
+        <ul class="list-unstyled text-start small">
+          <li><a href="index.html"     class="footer-link">Home</a></li>
+          <li><a href="about.html"     class="footer-link">About</a></li>
+          <li><a href="services.html"  class="footer-link">Services</a></li>
+          <li><a href="contact.html"   class="footer-link">Contact</a></li>
+        </ul>
+      </div>
+
+      <!-- Policies -->
+      <div class="col-6 col-md-3">
+        <h6 class="fw-semibold text-start mb-3">Policies</h6>
+        <ul class="list-unstyled text-start small">
+          <li><a href="cookie-policy.html"  class="footer-link">Cookie&nbsp;Policy</a></li>
+          <li><a href="privacy-policy.html" class="footer-link">Privacy&nbsp;Policy</a></li>
+        </ul>
+      </div>
+
+      <!-- Social -->
+      <div class="col-md-3">
+        <h6 class="fw-semibold text-start mb-3">Follow&nbsp;Us</h6>
+        <div class="d-flex gap-3 fs-4">
+          <a href="https://www.instagram.com/softtouchcarpets/"          class="footer-link" aria-label="Instagram"><i class="bi bi-instagram"></i></a>
+          <a href="https://www.facebook.com/profile.php?id=100092311272814" class="footer-link" aria-label="Facebook"><i class="bi bi-facebook"></i></a>
+          <a href="https://g.co/kgs/qTBwTbf"                              class="footer-link" aria-label="Google Business Profile"><i class="bi bi-google"></i></a>
+        </div>
+      </div>
+
     </div>
-  </footer>
+
+    <hr class="border-light my-4">
+
+    <div class="text-center small">
+      &copy; 2025 Soft Touch Carpets &amp; Elegant Edges &middot;
+      Website Design by
+      <a href="https://cleandesignuk.com/" class="footer-link">Clean&nbsp;Design&nbsp;UK</a>
+    </div>
+  </div>
+</footer>
+
+
+<script type="application/ld+json">
+{
+ "@context":"https://schema.org",
+ "@type":"FAQPage",
+ "mainEntity":[
+   {
+     "@type":"Question",
+     "name":"How quickly can you fit carpet in Luton?",
+     "acceptedAnswer":{
+       "@type":"Answer",
+       "text":"We can usually book home measuring within 48 hours and schedule installation within 7-10 days, subject to stock availability."
+     }
+   },
+   {
+     "@type":"Question",
+     "name":"Do you supply vinyl flooring as well as fit it?",
+     "acceptedAnswer":{
+       "@type":"Answer",
+       "text":"Yes – we carry a wide range of vinyl plank and vinyl floor tile designs and handle full installation, including sub-floor prep."
+     }
+   }
+ ]
+}
+</script>
+
 
   <!-- Bootstrap JS Bundle -->
   <script
@@ -482,5 +598,7 @@
     integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
     crossorigin="anonymous"
   ></script>
+
+   <script src="cookie.js"></script>
 </body>
 </html>
